/**
 * Tests for ContainerRenderer.
 *
 * Step 2 — T-0003-023..032e, T-0003-038, T-0003-038b, T-0003-038c
 *
 * Uses react-test-renderer (rtr) per the ADR test-file mapping.
 * RendererThemeProvider wraps every render so useRendererTheme() resolves.
 */
import React from 'react'
import {act, create} from 'react-test-renderer'

import type {A2UINode, A2UISpec} from '@app-creator/a2ui-schema'

import {RendererThemeProvider, DEFAULT_LIGHT_THEME} from '../theme/RendererThemeProvider'
import type {Dispatch, RenderState} from '../types'
import {ContainerRenderer} from './Container'

// We also need NodeRenderer (via render.tsx) for recursion and the
// T-0003-038b unknown-type fallback test. Import the top-level render
// function and NodeRenderer indirectly via the public surface.
import {render} from '../render'

// -- Helpers ------------------------------------------------------------------

function makeDispatch(): jest.Mock {
  return jest.fn()
}

function renderContainer(
  node: Parameters<typeof ContainerRenderer>[0]['node'],
  state: RenderState = {},
  dispatch: Dispatch = makeDispatch(),
) {
  return create(
    <RendererThemeProvider value={DEFAULT_LIGHT_THEME}>
      <ContainerRenderer node={node} state={state} dispatch={dispatch} />
    </RendererThemeProvider>,
  )
}

const HEADING_CHILD: A2UINode = {type: 'Heading', text: 'Hi'}
const TEXT_CHILD: A2UINode = {type: 'Text', text: 'body'}

// -- T-0003-023..024: direction -----------------------------------------------

describe('ContainerRenderer — direction', () => {
  // T-0003-023
  it('direction:row renders a View with flexDirection:row', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [],
    })
    const root = tree.toJSON() as any
    expect(root.props.style).toMatchObject({flexDirection: 'row'})
  })

  // T-0003-024
  it('direction:column renders a View with flexDirection:column', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
    })
    const root = tree.toJSON() as any
    expect(root.props.style).toMatchObject({flexDirection: 'column'})
  })
})

// -- T-0003-025..026: spacing tokens -----------------------------------------

describe('ContainerRenderer — spacing tokens', () => {
  // T-0003-025
  it('padding:lg resolves to theme.spacing.lg (24)', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
      padding: 'lg',
    })
    const root = tree.toJSON() as any
    expect(root.props.style).toMatchObject({padding: DEFAULT_LIGHT_THEME.spacing.lg})
    expect(root.props.style.padding).toBe(24)
  })

  // T-0003-026
  it('gap:md resolves to theme.spacing.md (16)', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
      gap: 'md',
    })
    const root = tree.toJSON() as any
    expect(root.props.style).toMatchObject({gap: DEFAULT_LIGHT_THEME.spacing.md})
    expect(root.props.style.gap).toBe(16)
  })
})

// -- T-0003-027: align --------------------------------------------------------

describe('ContainerRenderer — align', () => {
  // T-0003-027
  it('align:center → alignItems:center', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
      align: 'center',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({alignItems: 'center'})
  })

  it('align:start → alignItems:flex-start', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
      align: 'start',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({alignItems: 'flex-start'})
  })

  it('align:end → alignItems:flex-end', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
      align: 'end',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({alignItems: 'flex-end'})
  })

  it('align:stretch → alignItems:stretch', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
      align: 'stretch',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({alignItems: 'stretch'})
  })
})

// -- T-0003-028: justify ------------------------------------------------------

describe('ContainerRenderer — justify', () => {
  // T-0003-028
  it('justify:between → justifyContent:space-between', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [],
      justify: 'between',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({
      justifyContent: 'space-between',
    })
  })

  it('justify:start → justifyContent:flex-start', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [],
      justify: 'start',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({justifyContent: 'flex-start'})
  })

  it('justify:center → justifyContent:center', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [],
      justify: 'center',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({justifyContent: 'center'})
  })

  it('justify:end → justifyContent:flex-end', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [],
      justify: 'end',
    })
    expect((tree.toJSON() as any).props.style).toMatchObject({justifyContent: 'flex-end'})
  })
})

// -- T-0003-029: empty children -----------------------------------------------

describe('ContainerRenderer — boundary cases', () => {
  // T-0003-029
  it('empty children:[] renders an empty View without crashing', () => {
    expect(() => {
      renderContainer({
        type: 'Container',
        direction: 'column',
        children: [],
      })
    }).not.toThrow()
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [],
    })
    const root = tree.toJSON() as any
    expect(root.type).toBe('View')
    expect(root.children).toBeNull()
  })

  // T-0003-030
  it('recurses: nested Container produces the expected tree', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [
        {
          type: 'Container',
          direction: 'row',
          children: [HEADING_CHILD],
        },
      ],
    })
    const root = tree.toJSON() as any
    // Outer container
    expect(root.type).toBe('View')
    // Inner container is the first child
    expect(root.children[0].type).toBe('View')
    expect(root.children[0].props.style).toMatchObject({flexDirection: 'row'})
  })

  // T-0003-031
  it('renders correctly at 5 levels of nesting (well below depth-8 cap)', () => {
    function buildDeep(depth: number): A2UINode {
      if (depth === 0) return HEADING_CHILD
      return {
        type: 'Container',
        direction: 'column',
        children: [buildDeep(depth - 1)],
      }
    }

    expect(() => {
      renderContainer(buildDeep(5) as any)
    }).not.toThrow()
  })

  // T-0003-038: Container does NOT add accessibilityRole
  it('does NOT add accessibilityRole (layout-only; children carry their own roles)', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [HEADING_CHILD],
    })
    const root = tree.toJSON() as any
    expect(root.props.accessibilityRole).toBeUndefined()
  })
})

// -- T-0003-038b: unknown type falls through in NodeRenderer ------------------

describe('NodeRenderer — defensive fallback (T-0003-038b)', () => {
  it('a node with a runtime-injected unknown type falls through to [Unimplemented] text without throwing', () => {
    const SPEC_WITH_UNKNOWN: A2UISpec = {
      version: 1,
      views: [
        {
          id: 'main',
          root: {type: 'UnknownWidget' as any, text: 'x'} as any,
        },
      ],
      initialViewId: 'main',
    }

    let tree: any
    expect(() => {
      tree = create(
        <RendererThemeProvider value={DEFAULT_LIGHT_THEME}>
          {render({
            spec: SPEC_WITH_UNKNOWN,
            state: {},
            dispatch: makeDispatch(),
          })}
        </RendererThemeProvider>,
      )
    }).not.toThrow()

    // The fallback Text renders as a RN Text node whose children array
    // contains "[Unimplemented: ", "UnknownWidget", "]" — React serialises
    // the JSX expression `{node.type}` as a separate child node.
    const json = tree.toJSON() as any
    // Verify it's a Text node (not a throw/crash)
    expect(json.type).toBe('Text')
    // Verify the children array, when joined, produces the expected message
    const text = (json.children as string[]).join('')
    expect(text).toBe('[Unimplemented: UnknownWidget]')
  })
})

// -- T-0003-038c: key={i} — child state persists when array grows -------------

describe('ContainerRenderer — key stability (T-0003-038c)', () => {
  it('already-set state for a child id persists when children array grows (index-as-key)', () => {
    // This test validates the locked interpretation: A2UI children are
    // positionally addressed (index-as-key). When a new child is appended,
    // the existing child at index 0 keeps any associated state.
    //
    // We simulate this by rendering a Container with a stateful child
    // (a Heading whose text we can introspect), then re-rendering with a
    // second child appended, and verifying the first child is unchanged.
    //
    // Since Container + Heading have no stateful behavior themselves, we
    // verify at the spec-state level: the state keyed by the first child's
    // id does not change when the array grows.

    const SPEC_INITIAL: A2UISpec = {
      version: 1,
      views: [
        {
          id: 'main',
          root: {
            type: 'Container',
            direction: 'column',
            children: [
              {type: 'Heading', id: 'h1', text: 'First'},
            ],
          },
        },
      ],
      initialViewId: 'main',
      initialState: {h1_value: 42},
    }

    const SPEC_GROWN: A2UISpec = {
      ...SPEC_INITIAL,
      views: [
        {
          id: 'main',
          root: {
            type: 'Container',
            direction: 'column',
            children: [
              {type: 'Heading', id: 'h1', text: 'First'},
              {type: 'Heading', id: 'h2', text: 'Second'},
            ],
          },
        },
      ],
      initialState: {h1_value: 42, h2_value: 0},
    }

    // Render initial spec — state has h1_value:42
    let tree: any
    act(() => {
      tree = create(
        <RendererThemeProvider value={DEFAULT_LIGHT_THEME}>
          {render({spec: SPEC_INITIAL, state: {h1_value: 42}, dispatch: makeDispatch()})}
        </RendererThemeProvider>,
      )
    })

    // Re-render with grown spec — h1 is still at index 0
    act(() => {
      tree.update(
        <RendererThemeProvider value={DEFAULT_LIGHT_THEME}>
          {render({
            spec: SPEC_GROWN,
            state: {h1_value: 42, h2_value: 0},
            dispatch: makeDispatch(),
          })}
        </RendererThemeProvider>,
      )
    })

    const json = tree.toJSON() as any
    // Container renders two children; first child (index 0) is still First
    expect(json.children[0].children[0]).toBe('First')
    expect(json.children[1].children[0]).toBe('Second')
    // State record for h1_value is unaffected by the append — confirmed by
    // the fact that the state we passed in still has h1_value:42. The index-
    // as-key discipline means React does not remount the first child.
  })
})

// -- T-0003-032a..e: Snapshots ------------------------------------------------

describe('ContainerRenderer — snapshots', () => {
  // T-0003-032a
  it('snapshot: row + start + none padding + none gap', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [HEADING_CHILD, TEXT_CHILD],
      align: 'start',
    })
    expect(tree.toJSON()).toMatchSnapshot()
  })

  // T-0003-032b
  it('snapshot: row + center + lg padding + md gap', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [HEADING_CHILD, TEXT_CHILD],
      padding: 'lg',
      gap: 'md',
      align: 'center',
    })
    expect(tree.toJSON()).toMatchSnapshot()
  })

  // T-0003-032c
  it('snapshot: column + stretch + sm padding + sm gap', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [HEADING_CHILD, TEXT_CHILD],
      padding: 'sm',
      gap: 'sm',
      align: 'stretch',
    })
    expect(tree.toJSON()).toMatchSnapshot()
  })

  // T-0003-032d
  it('snapshot: column + end + md padding + lg gap', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'column',
      children: [HEADING_CHILD],
      padding: 'md',
      gap: 'lg',
      align: 'end',
    })
    expect(tree.toJSON()).toMatchSnapshot()
  })

  // T-0003-032e
  it('snapshot: row + between (justify) + md padding', () => {
    const tree = renderContainer({
      type: 'Container',
      direction: 'row',
      children: [HEADING_CHILD, TEXT_CHILD],
      padding: 'md',
      justify: 'between',
    })
    expect(tree.toJSON()).toMatchSnapshot()
  })
})
